--- a/sublime/settings.json
+++ b/sublime/settings.json
@@ -5,6 +5,7 @@
   "caret_extra_bottom": 1,
   "caret_extra_top": 1,
   "caret_style": "blink",
+  "color_scheme": "Packages/Color Scheme - Default/Mariana.sublime-color-scheme",
   "fade_fold_buttons": false,
   "font_options":
   [
@@ -27,9 +28,11 @@
   "show_line_endings": true,
   "tab_completion": false,
   "tab_size": 2,
+  "theme": "Adaptive.sublime-theme",
   "translate_tabs_to_spaces": true,
   "vintage_ctrl_keys": true,
   "vintage_start_in_command_mode": true,
   "vintage_use_clipboard": true,
-  "word_wrap": true
+  "word_wrap": true,
+  "update_check": false
 }
