--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -28,5 +28,6 @@
             "before": ["K", "J"],
             "after": ["<Esc>"]
         },        
-    ]
+    ],
+    "editor.occurrencesHighlight": false
 }
